# phParAdapt-dev

./: .gitignore  compV12.sh  compV12_opt.sh  compile_janus.sh  compile_mira.sh  compile_ucb.sh
Util/buildUtil/: Changes  LICENSE  Makefile  README  README.GNU  README.database  README.libraries  README.module  README.scorec  README.testing  buildDist  getarch  make.common  make.initial  static.pl
phParAdapt-Sim/: compKenB_ucb.sh  kenB.cc  kenB_cooley.cc
phParAdapt-Sim/phParAdapt/: BCInflowFaceInfo.cc  Eigen.cc  EssentialBC.h  GEN_data.cc  InitialCondition.h  Input.cc  Input.h  InverseMap.cc  M_writeVTKFile.cc  Makefile  MeshSimInternal.h  PeriodicBC.cc  R_edges.cc  R_entitiesBdry.cc  SPEBC.h  SizeLimit.cc  SmoothSize.cc  SmoothSize.cc_Sim  SmoothWallField.cc  ThickAdapt.cc  VolSim.cc  Vorticity.cc  WallStress.cc  adapt.cc  adapt.cc_7.2  attachData.cc  (+50 more)
phasta/: phUtil
phasta/phShape/phShape/: Makefile  Makefile.am  Makefile_phShape
phasta/phShape/phShape/.svn/: all-wcprops  dir-prop-base  entries
phasta/phShape/phShape/.svn/text-base/: Makefile.SCOREC.svn-base  configure.ac.svn-base
phasta/phShape/phShape/m4/.svn/: entries
phasta/phShape/phShape/src/: EnDrv2.c  FnDrv2.c  blend.cc  blendDrv2.cc  localIndex.cc  modeShape.cc  parDrv.cc  shapeFuncInternals.h
phasta/phShape/phShape/src/.svn/: all-wcprops  entries
phasta/phShape/phShape/src/.svn/text-base/: BnDrv2.c.svn-base  blendDrv.cc.svn-base  cequal.cc.svn-base  localIndex.cc.svn-base  modeShapeDrv.cc.svn-base  newshape.cc.svn-base  setQueryP.cc.svn-base  shapeFunction.cc.svn-base  shpDrv2.cc.svn-base
(+200 files in other folders)
